<resources>

    <string name="app_name">ResQFood</string>
    <string name="donation_name">Donation Name</string>
    <string name="description">Description</string>
    <string name="error_text">Fill this box</string>
    <string name="upload">Upload</string>
    <string name="location_name">Location</string>
    <string name="donation_title">Judul Donasi</string>
    <string name="for_sale">Sell Stuff</string>
    <string name="donation">Donation Info</string>
    <string name="dishes_name">Dishes Name</string>
    <string name="price">Price</string>
    <string name="expired">Expired</string>
    <string name="title_activity_primary">PrimaryActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string-array name="app_info">

        <item>1. ResQFood is not responsible for transactions made outside the application. Any transactions made outside the application are the responsibility of the user it self.</item>
        <item>2. We remind you to be careful and considerate when making transactions outside the app. ResQFood does not guarantee the security of such transactions.</item>

    </string-array>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="post_donation">Post Donation</string>
    <string name="post_sale">Post Product</string>
    <string name="profile">Profile</string>

    <string name="title_login_page">Kebersihan sebagian dari iman !</string>
    <string name="message_login_page">Please Login First !</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="message_welcome_page">Bagikan keseharianmu disini bersama teman-teman lainnya!</string>

    <string name="error_password">Password cannot be less than 8 characters</string>
    <string name="error_phone_number">The phone number must be a number</string>
    <string name="error_phone">Cell phone number cannot be less than 10 digits</string>

    <string name="error_price">Price input must be a digit</string>

    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="register_data">Fill your data !</string>
    <string name="user">User</string>
    <string name="description_example">Description Example</string>
    <string name="location">Location</string>
    <string name="location_example">Location Example</string>
    <string name="logout">Logout</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="fullname">Fullname</string>
    <string name="username">Username</string>
    <string name="expired_example">Expired Example</string>
    <string name="whatsapp_icon">WhatsApp Icon</string>
    <string name="title_example">Title Example</string>
    <string name="nomor_hp">Phone Number</string>
    <string name="search_bar_hint">Masukkan nama produk</string>
    <string name="test">ORAAA ORAAA</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="error_input">Data didn\'t matched correctly</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="empty_image_warning">Silakan masukkan pilih gambar di galeri terlebih dahulu</string>
    <string name="label_0">Roti</string>
    <string name="label_1">Bukan Roti</string>
    <string name="alert_title">Warning</string>
    <string name="copyright"><![CDATA[Copyright © 2024 ResQFood Team. All rights reserved]]></string>
    <string name="price_example">Price Example</string>
    <string name="phone_number">Phone Number</string>
    <string name="old">Old Images</string>
    <string name="title_activity_profiles">ProfilesActivity</string>

    <string name="title_home">My Account</string>
    <string name="title_user_donation">My Donation List</string>
    <string name="title_user_sell">My Product List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="judul_produk">Judul produk</string>
    <string name="account_reminder">Didn\'t have an account?</string>
    <string name="register_now">Register Now!</string>
    <string name="rupiah">Rp</string>
    <string name="login_string">Some food just wasted. Let\'s tackle it!</string>
    <string name="sale_title">Sale Title</string>
</resources>