<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.resqfood.view.main.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_donation"
        android:name="com.resqfood.view.posting.PostDonationFragment"
        android:label="@string/post_donation"
        tools:layout="@layout/fragment_post_donation" />

    <fragment
        android:id="@+id/nav_sale"
        android:name="com.resqfood.view.posting.PostSaleFragment"
        android:label="@string/post_sale"
        tools:layout="@layout/fragment_post_sale" />
</navigation>