<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_user">

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.resqfood.view.profile.ui.user_profile.UserFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/navigation_user_donation"
        android:name="com.resqfood.view.profile.ui.user_donation.UserDonationFragment"
        android:label="@string/title_user_donation"
        tools:layout="@layout/fragment_user_donation" />

    <fragment
        android:id="@+id/navigation_user_sell"
        android:name="com.resqfood.view.profile.ui.user_product.UserSellFragment"
        android:label="@string/title_user_sell"
        tools:layout="@layout/fragment_user_sell" />
</navigation>