<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.post_detail.DetailSaleActivity">

    <ImageView
        android:id="@+id/imageUpload"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:src="@drawable/blank_photo"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.resqfood.view.custom_view.CBTextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/title_example"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageUpload"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageUpload"
        app:layout_constraintTop_toBottomOf="@+id/imageUpload" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintStart_toStartOf="@+id/imageUpload"
        app:layout_constraintTop_toBottomOf="@+id/titleTV" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
        app:layout_constraintEnd_toEndOf="@+id/imageUpload"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toEndOf="@+id/circleImageView"
        app:layout_constraintTop_toTopOf="@+id/circleImageView" />

    <com.resqfood.view.custom_view.CBTextView
        android:id="@+id/CBTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/description"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/circleImageView"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <com.resqfood.view.custom_view.CTextView
        android:id="@+id/CTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/description_example"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/imageUpload"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/CBTextView2"
        app:layout_constraintTop_toBottomOf="@+id/CBTextView2" />

    <com.resqfood.view.custom_view.CBTextView
        android:id="@+id/CBTextView221"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/expired"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/CTextView2"
        app:layout_constraintTop_toBottomOf="@+id/CTextView2" />

    <com.resqfood.view.custom_view.CTextView
        android:id="@+id/CTextView2121"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/expired_example"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/imageUpload"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/CBTextView221"
        app:layout_constraintTop_toBottomOf="@+id/CBTextView221" />

    <FrameLayout
        android:id="@+id/btn_whatsapp"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/CTextView2121"
        app:layout_constraintTop_toBottomOf="@+id/CTextView2121" >

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_green"
            android:text="" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_whatsapp"
            android:contentDescription="@string/whatsapp_icon" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>