<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.HomeFragment">

<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="81dp"-->
<!--        android:background="@color/lime_green"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent">-->

<!--        <com.google.android.material.search.SearchBar-->
<!--            android:id="@+id/searchBar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="51dp"-->
<!--            android:layout_marginHorizontal="17dp"-->
<!--            app:hintTextColor="@color/main_green"-->
<!--            android:hint="@string/search_bar_hint">-->
<!--        </com.google.android.material.search.SearchBar>-->

<!--        <com.google.android.material.search.SearchView-->
<!--            android:id="@+id/searchView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            app:layout_anchor="@id/searchBar">-->
<!--        </com.google.android.material.search.SearchView>-->
<!--    </androidx.appcompat.widget.Toolbar>-->

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.search.SearchBar
                android:id="@+id/searchBar"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:layout_marginHorizontal="17dp"
                android:hint="@string/search_bar_hint"
                app:hintTextColor="@color/main_green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </com.google.android.material.search.SearchBar>

            <com.google.android.material.search.SearchView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_anchor="@id/searchBar"
                app:layout_constraintBottom_toBottomOf="@+id/rvSale"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

            </com.google.android.material.search.SearchView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="18dp"
                android:paddingVertical="9dp"
                android:text="@string/donation"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchBar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDonation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="9dp"
                android:paddingStart="18dp"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="18dp"
                android:paddingVertical="9dp"
                android:text="@string/for_sale"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvDonation" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="9dp"
                android:paddingVertical="9dp"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/tesLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/rvSale" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/main_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/copyright" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
